--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gcweb-en": "node ./scripts/build-gcweb-en.js",
     "gcweb-fr": "node ./scripts/build-gcweb-fr.js",
     "gcintranet-en": "node ./scripts/build-gcintranet-en.js",
-    "gcintranet-fr": "node ./scripts/build-gcintranet-fr.js"
+    "gcintranet-fr": "node ./scripts/build-gcintranet-fr.js",
+    "gh-pages" : "node ./scripts/gh-pages.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "fs-extra": "^8.1.0",
+    "gh-pages": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "soynode": "2.0.1"
   }
