--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-language: node_js
+language: generic
 dist: trusty
-
-install:
+before_install:
   - nvm install 12.14.0
   - nvm use 12.14.0
+
+install:
   - npm install
+
+scripts:
+  - npm run-script build
