--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,16 @@ before_install:
   - nvm use 12.14.0
 
 install:
-  - npm install
+  - npm install --quiet
 
 scripts:
-  - npm run-script build
+  - npm run-script travis_script
+
+deploy:
+  provider: pages
+  github_token: $GH_TOKEN
+  local_dir: ./dist/
+  repo: wet-boew/cdts-sgdc-cdn
+  fqdn: master
+  email: $GIT_AUTHOR_EMAIL
+  name: $GIT_AUTHOR_NAME
