change lisence to MIT add CODE_OF_CONDUCT add Copyright to README

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "git+ssh://git@github.com/wet-boew/cdts-sgdc.git"
   },
   "author": "ESDC-EDSC",
-  "license": "OGLC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/wet-boew/cdts-sgdc/issues"
   },
