--- a/package.json
+++ b/package.json
@@ -30,13 +30,18 @@
     "wet-boew": "github:wet-boew/wet-boew-cdn#v4.0-dist"
   },
   "devDependencies": {
-    "fs-extra": "^8.1.0",
     "grunt": "^1.0.4",
+    "grunt-banner": "^0.6.0",
+    "grunt-contrib-clean": "~1.1.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-connect": "^2.1.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-gh-pages": "~3.1.0",
+    "grunt-soy-compile": "^0.6.0",
     "load-grunt-tasks": "^5.1.0",
-    "gh-pages": "^2.2.0",
-    "npm-run-all": "^4.1.5",
-    "soynode": "2.0.1"
+    "time-grunt": "~1.3.0"
   }
 }
