--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   },
   "devDependencies": {
     "fs-extra": "^8.1.0",
+    "gh-pages": "^2.2.0",
     "grunt": "^1.0.4",
     "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-run": "^0.8.1",
     "load-grunt-tasks": "^5.1.0",
-    "gh-pages": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "soynode": "2.0.1"
   }
