add release script to deploy versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,5 @@ scripts:
   - npm run-script travis_script
 
 after_success:
+  - npm run-script deploy_release
   - npm run-script travis_after_success
