remove the deploy release in the build add the release bash script to the deploy repos

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "grunt",
     "travis_script": "grunt dist",
-    "travis_after_success": "grunt deploy",
-    "deploy_release" : "release.sh"
+    "travis_after_success": "grunt deploy"
   },
   "repository": {
     "type": "git",
