--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cdts-sgdc",
-  "version": "1.0.0-beta-b",
+  "version": "1.0.0-development",
   "description": "The purpose of the CDTS is essentially to deliver the presentation layer of the Canada.ca theme or Intranet.canada.ca theme to web assets. It decouples the presentation layer from the business logic of a static website or web application and allows rapid updates across multiple networks.",
   "main": "index.js",
   "scripts": {
