--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,5 @@ scripts:
   - npm run-script travis_script
 
 after_success:
+  - echo "machine github.com login $GH_TOKEN" >> ~/.netrc
   - npm run-script travis_after_success
