--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    ports:
+      - "8000:8000"
     volumes:
       - .:/home/node/app
       - node_modules:/home/node/app/node_modules
