--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "grunt": "^1.0.4",
     "grunt-banner": "^0.6.0",
+    "compression": "^1.7.4",
     "grunt-contrib-clean": "~1.1.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-connect": "^2.1.0",
