--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/wet-boew/cdts-sgdc#README",
   "dependencies": {
     "gcweb": "github:wet-boew/themes-cdn#v6.0-gcweb",
-    "wet-boew": "github:wet-boew/wet-boew-cdn#v4.0-dist"
+    "wet-boew": "github:wet-boew/wet-boew-cdn#v4.0-dist",
+    "jquery": "github:jquery/jquery#1.11.1"
   },
   "devDependencies": {
     "grunt": "^1.0.4",
