--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "wet-boew": "github:wet-boew/wet-boew-cdn#v4.0-dist"
   },
   "devDependencies": {
+    "compression": "^1.7.4",
     "grunt": "^1.0.4",
     "grunt-banner": "^0.6.0",
     "grunt-contrib-clean": "~1.1.0",
