--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/wet-boew/cdts-sgdc#README",
   "dependencies": {
+    "coffeescript": "^2.5.1",
     "gcweb": "github:wet-boew/themes-cdn#v6.0-gcweb",
+    "minimist": "^1.2.5",
     "wet-boew": "github:wet-boew/wet-boew-cdn#v4.0-dist"
   },
   "devDependencies": {
-    "grunt": "^1.0.4",
+    "grunt": "^1.3.0",
     "grunt-banner": "^0.6.0",
     "grunt-contrib-clean": "~1.1.0",
     "grunt-contrib-concat": "~0.5.0",
@@ -32,7 +34,7 @@
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-gh-pages": "~3.1.0",
+    "grunt-gh-pages": "^4.0.0",
     "grunt-soy-compile": "^0.6.0",
     "load-grunt-tasks": "^5.1.0",
     "time-grunt": "~1.3.0"
