--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
     "wet-boew": "github:wet-boew/wet-boew-cdn#v4.0-dist"
   },
   "devDependencies": {
-    "grunt": "^1.0.4",
+    "coffeescript": "^2.5.1",
+    "grunt": "^1.3.0",
     "grunt-banner": "^0.6.0",
-    "grunt-contrib-clean": "~1.1.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-connect": "^2.1.0",
-    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^3.0.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-uglify": "^5.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-gh-pages": "~3.1.0",
+    "grunt-gh-pages": "^4.0.0",
     "grunt-soy-compile": "^0.6.0",
     "load-grunt-tasks": "^5.1.0",
-    "time-grunt": "~1.3.0"
+    "time-grunt": "^2.0.0"
   }
 }
