--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
   },
   "author": "ESDC-EDSC",
   "license": "MIT",
-  "dependencies": {
-    "axios": "^0.21.4",
-    "https-proxy-agent": "^5.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@wdio/cli": "^6.12.1",
     "@wdio/dot-reporter": "^7.0.0",
@@ -39,6 +36,8 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-exec": "^3.0.0",
     "grunt-webdriver": "^3.0.0",
-    "html-validate": "^5.5.0"
+    "html-validate": "^5.5.0",
+    "axios": "^0.21.4",
+    "https-proxy-agent": "^5.0.0"
   }
 }
