--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@wdio/selenium-standalone-service": "^7.14.1",
     "@wdio/spec-reporter": "^7.14.1",
     "axe-core": "^4.3.3",
+    "axios": "^0.22.0",
     "ejs": "^3.1.6",
+    "eslint": "^7.32.0",
     "global-agent": "^3.0.0",
     "grunt": "^1.4.1",
     "grunt-cli": "^1.4.3",
@@ -37,7 +39,6 @@
     "grunt-exec": "^3.0.0",
     "grunt-webdriver": "^3.0.0",
     "html-validate": "^6.1.0",
-    "axios": "^0.22.0",
     "https-proxy-agent": "^5.0.0"
   }
 }
