Added eslint invocation to Gruntfile

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^23.0.0",
     "grunt-exec": "^3.0.0",
     "grunt-webdriver": "^3.0.0",
     "html-validate": "^6.1.0",
