--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axe-core": "^4.3.3",
     "axios": "^0.22.0",
     "ejs": "^3.1.6",
+    "ejs-lint": "^1.2.1",
     "eslint": "^7.32.0",
     "global-agent": "^3.0.0",
     "grunt": "^1.4.1",
@@ -37,7 +38,6 @@
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^23.0.0",
-    "grunt-exec": "^3.0.0",
     "grunt-webdriver": "^3.0.0",
     "html-validate": "^6.1.0",
     "https-proxy-agent": "^5.0.0"
