--- a/.github/workflows/testlinks.yml
+++ b/.github/workflows/testlinks.yml
@@ -1,10 +1,14 @@
-name: CI
+name: TESTLINKS
 
 on:
   push:
-    branches-ignore:
-      - "dependabot/**"
-  pull_request:
+    branches:
+      - "master"
+      - "feat-*"
+      - "maintenance-*"
+      - "release-*"
+  schedule:
+    - cron: "30 11 * * 1"
 
 jobs:
   build:
@@ -28,9 +32,6 @@ jobs:
         run: npm ci
 
       - name: Test
-        run: npm test
+        run: npm run test-links
         env:
           DISABLE_PROXY: true
-          # Disabling the "test-links" phase because it takes way too long to run as often as this CI workflow runs.
-          # "test-links" was moved to workflow `testlinks.yml`.
-          DISABLE_TESTLINKS: true
