--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-nowet": "grunt --stack build-nowet --cdts_samples_cdnenv=localhost",
     "serve": "grunt --stack serve --cdts_samples_cdnenv=localhost",
     "serve-nobuild": "grunt --stack serve-nobuild --cdts_samples_cdnenv=localhost",
-    "test": "grunt --stack test --cdts_samples_cdnenv=localhost"
+    "test": "grunt --stack test --cdts_samples_cdnenv=localhost",
+    "test-links": "grunt --stack test-links"
   },
   "author": "ESDC-EDSC",
   "license": "MIT",
