--- a/.github/workflows/testlinks.yml
+++ b/.github/workflows/testlinks.yml
@@ -11,6 +11,9 @@ on:
     - cron: "30 11 * * 1"
 
 jobs:
+  # Avoid running for pushes comming from dependabot merges (as they wouldn't alter links)
+  # Determining this from commit message may not be ideal, but seems like the only way from the info available on push
+  if: github.event_name == 'schedule' || !(startsWith(github.event.head_commit.message, 'Merge pull request') && contains(github.event.head_commit.message, 'wet-boew/dependabot/'))
   build:
     runs-on: ubuntu-latest
 
