Setting version 4.0.46, updating ci scripts for problem caused by new npm

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Build
         run: |
-          npm ci
+          npm ci --legacy-peer-deps
           npm run build-prod
         env:
           DISABLE_PROXY: true
