--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,30 @@
-# Set default behaviour, in case users don't have core.autocrlf set.
+# Ensure that text files that any contributor introduces to the repository have their line endings normalized
 * text=auto
+
+# Ensure LF line ending for our text files of interest
+*.js text eol=lf
+*.json text eol=lf
+*.css text eol=lf
+*.ejs text eol=lf
+*.html text eol=lf
+*.md text eol=lf
+*.svg text eol=lf
+*.xml text eol=lf
+*.xslt text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+
+.gitattributes text eol=lf
+.gitignore text eol=lf
+
+# Ensure some files are considered binary in diffs
+*.png binary
+*.gif binary
+*.jpg binary
+*.jpeg binary
+*.eot binary
+*.otf binary
+*.ttf binary
+*.ico binary
+*.woff binary
+*.woff2 binary
