--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 *.ejs text eol=lf
 *.html text eol=lf
 *.md text eol=lf
+*.txt text eol=lf
 *.svg text eol=lf
 *.xml text eol=lf
 *.xslt text eol=lf
