--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,25 @@ jobs:
           # Disabling the "test-links" phase because it takes way too long to run as often as this CI workflow runs.
           # "test-links" was moved to workflow `testlinks.yml`.
           DISABLE_TESTLINKS: true
+
+  spellcheck:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          cache: pip
+          cache-dependency-path: pyspelling-requirements.txt
+
+      - name: Install aspell
+        run: sudo apt-get install aspell aspell-en aspell-fr
+
+      - name: Install python dependencies
+        run: pip install -r pyspelling-requirements.txt
+
+      - name: Spellcheck
+        run: python -m pyspelling
