--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@wdio/local-runner": "^8.15.4",
     "@wdio/mocha-framework": "^8.16.3",
     "@wdio/selenium-standalone-service": "^8.15.0",
+    "wdio-selenium-standalone-service": "^0.0.12",
     "@wdio/spec-reporter": "^8.16.3",
     "axe-core": "^4.7.2",
     "axios": "^1.5.0",
